# pico-color-picker

./: .gdbinit  .gitignore  .gitmodules  .lvimrc  .uncrustify.cfg  CMakeLists.txt  Coding_Standards.md  Naming_Standards.md  README.md  TODO.md  code.py  pico_freetype.cmake
IBM-Plex-Mono/: CMakeLists.txt
cad/: fp-info-cache  pico-color-picker.kicad_pcb  pico-color-picker.kicad_prl  pico-color-picker.kicad_pro  pico-color-picker.kicad_sch  pico-color-picker.kicad_sch-bak
cad/pico-color-picker-gerbers/: pico-color-picker-B_Cu.gbr  pico-color-picker-B_Mask.gbr  pico-color-picker-B_Paste.gbr  pico-color-picker-B_Silkscreen.gbr  pico-color-picker-Edge_Cuts.gbr  pico-color-picker-F_Cu.gbr  pico-color-picker-F_Mask.gbr  pico-color-picker-F_Paste.gbr  pico-color-picker-F_Silkscreen.gbr  pico-color-picker-NPTH.drl  pico-color-picker-PTH.drl  pico-color-picker-job.gbrjob
config/: FreeRTOSConfig.h
config/freetype/config/: ftoption.h
docs/: Doxyfile.in
include/freetype/config/: ftmodule.h
src/: CMakeLists.txt  bitmap.c  bitmap.cpp  bitmap.h  bitmap_ssd1306.c  button.c  button.h  buttons.c  buttons.cpp  buttons.h  chord.c  color.c  color.h  color_menu.c  color_menu.h  color_picker.h  colors.c  colors.h  context.c  context.cpp  context.h  hid.c  hid.h  input.c  input.h  io_devices.c  io_devices.h  io_devices.pio  main.c  menu.c  menu.h  menu_context.h  note_color.c  note_color.h  pcp.h  pico_debug.h  pico_ft2.c  pico_ft2.h  pio_irq.c  pio_irq.h  (+14 more)
src/fonts/: 5thElement.c  Dina_r400_10.c  Dina_r400_6.c  Dina_r400_8.c  Dina_r400_9.c  Dina_r700_10.c  Dina_r700_8.c  Dina_r700_9.c  bitocra.c  bitocra7.c  font.h  spleen_12x24.c  spleen_16x32.c  spleen_32x64.c  spleen_5x8.c  spleen_8x16.c  ter-u12n.c  ter-u14n.c  ter-u18n.c  ter-u22n.c  ter_u16n.c  ter_u20n.c  ter_u24n.c  ter_u28n.c  ter_u32n.c
tools/: CMakeLists.txt
